--- a/style.css
+++ b/style.css
@@ -130,4 +130,201 @@ nav ul li a:hover {
 /*about area css end here*/
 
 /*services area css end here*/
+.services{
+       
+    width: 100%;
+    padding: 100px 0px;
+    background-color:beige;
+}
+.tittle h2{
+    color: r;
+    font-size: 75px;
+    width: 1130px;
+    margin: 30px auto;
+    text-align: center;
+}
+.card{
+    color:#fcfc;
+    font-size: 30px;
+    height: 365px;
+    width: 335px;
+    padding: 20px 35px;
+    background: #191919;
+    border-radius: 20px;
+    margin: 15px;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+}
+.box{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    min-height: 400px;
+}
+.card i {
+    font-size: 50px;
+    display: block;
+    text-align: center;
+    margin: 25px 0px;
+    color: rgb(246, 3, 3);
+}
+h5{
+    color:chocolate;
+    font-weight: bold;
+    font-size: 30px;
+    margin-bottom: 15px;
+}
+.card p{
+    color: #fcfc;
+    margin-bottom: 35px;
+    font-size: 16px;
+    line-height: 27px;
+    
+}
+
+.card .buttom{
+background-color:black;
+padding: 9px 22px;
+border-radius: 35px;
+color: white;
+font-size: 20px;
+border: 2px solid rgb(255, 1, 1);
+transition: .9s;
+margin-top: 25px;
+text-decoration: none;
+
+}
+.card .buttom:hover{
+background-color: red;
+color: black;
+border: 2px solid rgb(255, 255, 255);
+cursor: pointer;
+
+}
 /*services area css end here*/
+
+
+/*contact me area css start here*/
+
+
+.contact-me{
+    width: 100%;
+    height: 290px;
+    background: burlywood;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+.contact-me p{
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 25px;
+    border: 3px solid white;
+    padding: 20px;
+    border-radius: 30px;
+    background-color:burlywood;
+    transition: border 0.3s, color 0.3s;
+    
+}
+.contact-me p:hover{
+    border: 3px solid #e74c3c; 
+    
+}
+.contact-me .buttom-2{
+    background-color:black;
+    padding: 7px 20px;
+    border-radius: 35px;
+    color: white;
+    font-size: 20px;
+    border: 2px solid red;
+    transition: .9s;
+    text-decoration: none;
+    animation: music 1s infinite linear;
+}
+.contact-me .buttom-2:hover{
+    background-color: red;
+    color: black;
+    border: 2px solid rgb(255, 255, 255);
+    cursor: pointer;
+}
+/*contact me area css end here*/
+
+
+/* footer  area css  start here*/
+
+footer{
+    position: relative;
+    width: 100%;
+    height: 300px;
+    background: #101010;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+footer p:nth-child(1){
+    font-size: 25px;
+    color: white;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+footer p:nth-child(2){
+    color: white;
+    font-size: 17px;
+    width: 500px;
+    text-align: center;
+    line-height: 26px;
+}
+.social{
+    display: flex;
+}
+.social a{
+    width: 45px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    border-radius: 50px;
+    margin: 22px 10px;
+    text-decoration: none;
+    color: red;
+    transition: 1s;
+    
+}
+.social a:hover{
+    background-color: red;
+    color: white;
+    border: 1px solid black;
+    transform: scale(1.3);
+}
+
+
+.end-footer{
+    background-color: #000;
+    width: 100%;
+    height: 60px;
+    align-items: center;
+    
+    align-items: center;
+}
+.end-footer p{
+    position: absolute;
+    color: red;
+    position: relative;
+    align-items: center;
+    text-align: center;
+    
+    
+}
+.p{
+    text-align: center;
+    padding-top: 20px;
+    cursor: pointer;
+    
+}
+/* footer  area css  end here*/
+/* the end */
